# secondecommit

./: README.md
kkdai_report/activity/trunk/: simplepage.bat
kkdai_report/activity/trunk/spread/: kkdai1.json  onloginok.html
kkdai_report/kkd_bbs/trunk/: api.php  changenickname.html  changenickname.php  changenicknametouch.html  forum.php
kkdai_report/kkd_bbs/trunk/config/: config_global_tpl.php
kkdai_report/kkd_bbs/trunk/readme/: 上线纪要.md  快快贷bbs部署步骤.md
kkdai_report/kkd_bbs/trunk/sqls/: 1-tgh.sql  2-tgh.sql  3-sql.sql  4-sql.sql  5-sql.sql
kkdai_report/kkd_bbs/trunk/uc_server/: avatar.php
kkdai_report/kkdai_report/tags/20161228_目标管理/: readme.txt  readme_rights.md
kkdai_report/kkdai_report/trunk/conf/: application.ini  autoload.php  globals_tpl.php  inc4tests.php
kkdai_report/kkdai_report/trunk/doc/: kkdai_database.md  kkdai_intro.md  业务周报（模板）.xlsx  财务报表 (模板).xlsx
kkdai_report/kkdai_report/trunk/public/: error.html  evt_reg.php  forbid.html  index.php
kkdai_report/kkdai_report/trunk/run/: LuckpagDataGrab.php  LuckpagSMS.php  crond.php  loopall.php  loopall2.php  reED.sh  redo.sh  senven_investment_fbb.php  seven_activity_rewardSMS.php  tb_activity_nov_20161130rewardSMS.php  tb_activity_september_20161019rewardSMS.php  (+1 more)
kkdai_report/kkdai_report/trunk/tools/db/: Delete.cpp  Delete.h  Field.cpp  Field.h  Index.cpp  Index.h  Makefile.am  Obj.cpp  Obj.h  Select.cpp  Select.h  Table.cpp  Table.h  Update.cpp  Update.h  Utils.cpp  Utils.h  Where.cpp  Where.h  configure.ac  main.cpp  maked.sh  mysqltest.cpp  mysqltest.h  sharelib.h
(+1289 files in other folders)
